environments/informationtechnology-205813/jenkins/ubuntu-deployment.yml
# Copyright 2015 Google Inc. All rights reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
# [START ubuntu_deployment]
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: ubuntu
  namespace: jenkins
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: jenkins-interactive
    spec:
      containers:
      - name: master
        image: ubuntu:18.04
        command: ['/bin/bash', '-c', 'sleep infinity']
