environments/informationtechnology-205813/jenkins/jenkins-narrative-cloud-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/auth-signin: https://$host/oauth2/start
    nginx.ingress.kubernetes.io/auth-url: http://oauth.default.svc.cluster.local:4180/oauth2/auth
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  name: jenkins
  namespace: jenkins
spec:
  rules:
  - host: jenkins.narrative.cloud
    http:
      paths:
      - backend:
          serviceName: jenkins
          servicePort: 8080
  tls:
  - secretName: cloudflare-wildcard-narrative-cloud
    hosts:
      - jenkins.narrative.cloud
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: oauth-jenkins
  namespace: default
spec:
  rules:
  - host: jenkins.narrative.cloud
    http:
      paths:
      - backend:
          serviceName: oauth
          servicePort: 4180
        path: /oauth2
  tls:
  - secretName: cloudflare-wildcard-narrative-cloud
    hosts:
      - jenkins.narrative.cloud
